Fix label/input overlap bug in dialog box (cherry pick from Remi http://code.google.com/r/remigrumeau-iui-dev/source/detail?r=f0481e4af0e79100ab62f1304f07d5e6cfdc614e)

--- a/web-app/iui/iui.css
+++ b/web-app/iui/iui.css
@@ -237,9 +237,11 @@ body > .dialog {
 
 .dialog > fieldset > label {
     position: absolute;
-    margin: 16px 0 0 6px;
+    margin: 18px 0 0 6px;
     font-size: 14px;
     color: #999999;
+    width:	5em;
+    text-align:	left;
 }
 
 input:not([type|=submit]):not([type|=radio]):not([type|=checkbox]) {
@@ -248,8 +250,8 @@ input:not([type|=submit]):not([type|=radio]):not([type|=checkbox]) {
     -moz-box-sizing: border-box;
     width: 100%;
     margin: 8px 0 0 0;
-    padding: 6px 6px 6px 44px;
-    font-size: 16px;
+    padding: 6px 6px 6px 5em;
+    font-size: 14px;
     font-weight: normal;
 }
 
